# vcs

./: .gitignore  schema.sql
backend/: main.go  readme.md  schema.sql
backend/server/: server.go
backend/src/: backend  main.go
backend/src/server/: server.go
backend/src/utils/: utils.go
backend/utils/: utils.go
cli/: readme.md
cli/Log/: client_ts.c  logger.c  logger.h  test_log
client/: client.c  client.h  meson.build  proxyfs.c  readme.md
client/AUTH/: Auth.c  Auth.h
client/Test/: test  test_R-W.c  test_r-w
client/go-fuse/: go.mod  go.sum  proxy_fs.go
client/src/: client.c  client.h  diff.c  diff.h  proxyfs.c  utils.c  utils.h
web/: readme.md
